adding nest